# backend/docs/swagger.yaml
@@ -2883,8 +2883,8 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/github_com_aeroxe_approval-flow_internal_pkg_response.Response'
-        "409":
-          description: Conflict
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_aeroxe_approval-flow_internal_pkg_response.Response'
       summary: Create template
@@ -3040,8 +3040,8 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/github_com_aeroxe_approval-flow_internal_pkg_response.Response'
-        "409":
-          description: Conflict
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_aeroxe_approval-flow_internal_pkg_response.Response'
       summary: Create workflow
